# dorina-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  install.ps1  install.sh  main.py  pyproject.toml  requirements.txt  run_all_tests.py  self_restart.py  setup.py  soul.md  start-dorina.sh  test_dorina.py  test_search.py
agents/: __init__.py  crew.py  task_runner.py  task_tools.py
audio/: __init__.py  microphone.py  stt.py  tts.py
bg_tools/: task_manager.py
browser/: client.py
cache/: provider.py
commands/: __init__.py  config_commands.py  data_commands.py  debug_commands.py  goal_commands.py  session_commands.py  system_commands.py  tool_commands.py
core/: __init__.py  bootstrap.py  config.py  constants.py  error_classifier.py  error_db.py  event_bus.py  logger.py  mode_manager.py  model_utils.py  tokenizer.py  utils.py  version_manager.py
cron/: __init__.py  scheduler.py
docs/: API.md  ARCHITECTURE.md  SETUP.md
evolution/: self_check.py  tools.py
export/: formats.py
gateway/: __init__.py  auth.py  health.py  main.py  models.py  ratelimit.py  routes.py  server.py
history/: file_history.py  tools.py
hooks/: lifecycle.py  logging_hook.py  metrics_hook.py
knowledge/: deep_research.py  rag_engine.py  research_prompts.py  session_indexer.py  web_scrape.py  web_search.py
lsp/: __init__.py  client.py  tools.py
mail/: __init__.py  client.py  tools.py
memory/: __init__.py  auto_extract.py  base.py  episodic.py  procedural.py  semantic.py  working.py
monitoring/: dashboard.py  insights.py  metrics.py
orchestrator/: __init__.py  agent_loop.py  checkpoint.py  cleaner.py  compressor.py  context.py  greeting.py  (+10 more)
(+112 files in other folders)
