[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dorina-agent"
version = "1.0.0"
description = "Self-hosted CLI AI agent with 65+ tools, 23 providers, multi-model support, and self-testing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Talha Atalha Tülü", email = "talha@atalhatulu.com"},
]

dependencies = [
    "litellm>=1.60.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "orjson>=3.9.0",
    "sqlalchemy>=2.0.0",
    "ddgs>=1.0.0",
    "chromadb>=0.6.0",
    "duckduckgo_search>=7.0.0",
    "fastembed>=0.5.0",
    "playwright>=1.50.0",
    "docker>=7.0.0",
    "pyperclip>=1.9.0",
    "tiktoken>=0.9.0",
    "pillow>=10.0.0",
    "fastapi>=0.100.0",
    "edge-tts>=6.1.0",
    "pyaudio>=0.2.13",
    "openai-whisper>=20231117",
]

[project.scripts]
dorina = "main:entry"

[project.urls]
Homepage = "https://github.com/atalhatulu/dorina-agent"
Documentation = "https://github.com/atalhatulu/dorina-agent#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=5.0.0",
]
full = [
    "chromadb>=0.6.0",
    "fastembed>=0.5.0",
    "playwright>=1.50.0",
    "docker>=7.0.0",
    "pyperclip>=1.9.0",
    "tiktoken>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
